[package]
name = "hello_nalgebra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.1"
nalgebra = { version = "0.29.0", features = [ "rand_distr", "rand"] }
nalgebra-lapack = { version = "*", default-features = false, features = ["accelerate"] }
